Closed
Bug 398269
Opened 16 years ago
Closed 15 years ago
Crash [@ nsPrintEngine::DoPrint] when trying to print frame style=overflow: scroll; position: fixed;
Categories
(Core :: Printing: Output, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta2
People
(Reporter: martijn.martijn, Assigned: roc)
References
Details
(Keywords: crash, regression, testcase)
Crash Data
Attachments
(3 files)
113 bytes,
application/xhtml+xml
|
Details | |
1.04 KB,
patch
|
Details | Diff | Splinter Review | |
1.26 KB,
patch
|
MatsPalmgren_bugz
:
review+
MatsPalmgren_bugz
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, while trying to print that testcase, I crash with current trunk build. This seems to have regressed between 2006-12-09 and 2006-12-10: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-12-09+04&maxdate=2006-12-10+09&cvsroot=%2Fcvsroot Probably a regression from bug 361844. http://crash-stats.mozilla.com/report/index/dc9fa8a1-70e9-11dc-a3aa-001a4bd43ef6 0 nsPrintEngine::DoPrint(nsPrintObject*) mozilla/layout/printing/nsPrintEngine.cpp:2166 1 nsPrintEngine::PrintDocContent(nsPrintObject*, unsigned int&) mozilla/layout/printing/nsPrintEngine.cpp:2032 2 nsPrintEngine::PrintDocContent(nsPrintObject*, unsigned int&) mozilla/layout/printing/nsPrintEngine.cpp:2041 3 nsPrintEngine::DonePrintingPages(nsPrintObject*, unsigned int) mozilla/layout/printing/nsPrintEngine.cpp:2650 4 nsPagePrintTimer::Notify(nsITimer*) mozilla/layout/printing/nsPagePrintTimer.cpp:93 5 nsTimerImpl::Fire() mozilla/xpcom/threads/nsTimerImpl.cpp:387 6 nsTimerEvent::Run() mozilla/xpcom/threads/nsTimerImpl.cpp:457 7 nsThread::ProcessNextEvent(int, int*) mozilla/xpcom/threads/nsThread.cpp:490 8 NS_ProcessNextEvent_P(nsIThread*, int) nsThreadUtils.cpp:227 9 nsBaseAppShell::Run() mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:154 10 nsAppStartup::Run() mozilla/toolkit/components/startup/src/nsAppStartup.cpp:170 11 XRE_main mozilla/toolkit/xre/nsAppRunner.cpp:3123 12 main mozilla/browser/app/nsBrowserApp.cpp:153 13 WinMain mozilla/browser/app/nsBrowserApp.cpp:166 14 __tmainCRTStartup crtexe.c:589 15 BaseProcessStart
Flags: blocking1.9?
Updated•16 years ago
|
Flags: blocking1.9? → blocking1.9+
Updated•16 years ago
|
Priority: -- → P2
Target Milestone: --- → mozilla1.9 M10
Assignee | ||
Comment 2•16 years ago
|
||
I really think we should fix the underlying bug here. This should be taking the frameset printing path. It's probably not that hard to fix. Assign it to me if you don't want to mess with the print engine...
Updated•15 years ago
|
Assignee: nobody → roc
Assignee | ||
Comment 3•15 years ago
|
||
I'm not really sure who's the right reviewer for print engine bugs these days. This patch is fairly straightforward though. Naked "frame" elements should be treated as IFRAMEs, not frameset frames.
Attachment #298377 -
Flags: superreview?(mats.palmgren)
Attachment #298377 -
Flags: review?(mats.palmgren)
Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs review]
Comment 4•15 years ago
|
||
Comment on attachment 298377 [details] [diff] [review] fix Looks ok, but see also bug 415327 which might be related. r+sr=mats
Attachment #298377 -
Flags: superreview?(mats.palmgren)
Attachment #298377 -
Flags: superreview+
Attachment #298377 -
Flags: review?(mats.palmgren)
Attachment #298377 -
Flags: review+
Updated•15 years ago
|
OS: Windows XP → All
Whiteboard: [needs review]
Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs landing]
Assignee | ||
Updated•15 years ago
|
Attachment #286009 -
Flags: review?(roc)
Assignee | ||
Comment 5•15 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs landing]
Reporter | ||
Comment 6•15 years ago
|
||
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008021004 Minefield/3.0b4pre
Status: RESOLVED → VERIFIED
Updated•12 years ago
|
Crash Signature: [@ nsPrintEngine::DoPrint]
You need to log in
before you can comment on or make changes to this bug.
Description
•