Bug 398269. Treat naked <frame> elements not in framesets like <iframes> when printing. r+sr=mats